# devMem

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.sandbox  README.md  pyproject.toml  sandbox.sh
.github/workflows/: ci.yml
devmem/: __init__.py  _hooks.py  cli.py  config.py  daemon.py  daemon_main.py  mcp_server.py  models.py
devmem/collectors/: ai_chat.py  git.py  shell.py  vscode.py
devmem/processor/: embedder.py  enricher.py  session.py
devmem/query/: context.py  llm.py  retriever.py  timeparser.py
devmem/storage/: db.py  vectors.py
git-hooks/: post-checkout  post-commit  post-merge  pre-push
recall/: __init__.py  _hooks.py  cli.py  config.py  daemon.py  daemon_main.py  mcp_server.py
recall/collectors/: ai_chat.py  containers.py  git.py  linux_process.py  linux_session.py  linux_window.py  shell.py  vscode.py
recall/processor/: embedder.py  enricher.py  session.py
recall/query/: context.py  llm.py  retriever.py
recall/storage/: db.py
recall/vscode-extension/: package.json  tsconfig.json
recall/vscode-extension/src/: extension.ts
shell/: hook.bash  hook.fish  hook.zsh
tests/: test_collectors.py  test_enricher.py  test_query.py  test_session.py  test_storage.py
tests/fixtures/: sample_copilot.jsonl
vscode-extension/: package.json
vscode-extension/src/: extension.ts
