[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-recall"
version = "0.2.1"
description = "Local-first developer memory layer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["developer-tools", "memory", "productivity", "cli"]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "watchdog>=4.0",
    "flask>=3.0",
    "requests>=2.31",
    "platformdirs>=4.0",
    "python-dateutil>=2.9",
    "humanize>=4.0",
    "mcp>=1.0",
]

[project.scripts]
recall = "recall.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "pytest-mock", "ruff"]
# Optional collectors — install only the ones you want
linux = [
    "psutil>=5.9",         # process/port tracking
    "dbus-next>=0.2",      # session lock/sleep events (Linux D-Bus)
    "docker>=7.0",         # Docker/Podman container events
]
# PyGObject (gi/Wnck) for X11 window tracking is a system package;
# install via: sudo apt install python3-gi gir1.2-wnck-3.0

[tool.setuptools.packages.find]
where = ["."]
include = ["recall*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
